@@ -14,11 +14,16 @@ Doc:
    - local Chinese papers are underrepresented in S2
 
 Features:
- - allow || && ! in expressions
+ - "Accept all" button
  - file selectors in settings dialog
  - alternatively use Open Citations
+ - recipes: export to / start / import from annotation tool --- both in filter2
+ - in filter2()  Prodigy
+ - in annotate() export to / start / import from Prodigy
+ - optional wordnet capability to include synonyms
+
+Other ideas:
  - somehow use S2 embeddings
  - increase TIMEOUT strategically
  - adding/changing keywords before Finish will change paper list in filter2(), ask yes/no
- - make pubdate stats a SwingPanel
- - "Accept all" button
+ - allow || && ! in expressions
