@@ -1,4 +1,9 @@
 ## START
+v2323
+ - fix: crash when queries/directory can't be written
+ - fix: don't allow '/' in query name
+ - fix: when pasting URL into DOI field, do decode
+
 v2322
  - show changes in about()
  - you can now use DOI URLs in settings
